--- a/hateoas-frontend/sonar-project.properties
+++ b/hateoas-frontend/sonar-project.properties
@@ -7,3 +7,8 @@ sonar.login=98bbbe68585aaa260605a3547a0008680d95eb1b
 
 sonar.sources=src
 sonar.sourceEncoding=UTF-8
+
+# sonar.test.inclusions=src/**/*.spec.js,src/**/*.spec.jsx,src/**/*.test.js,src/**/*.test.jsx,src/**/*.test.ts,src/**/*.test.tsx
+# sonar.coverage.exclusions=src/serviceWorker.ts,src/index.tsx
+# sonar.typescript.lcov.reportPaths=coverage/lcov.info
+# sonar.testExecutionReportPaths=coverage/test-report.xml
